fix alignment of notifications

--- a/client/assets/styles/scss/components/notifications.scss
+++ b/client/assets/styles/scss/components/notifications.scss
@@ -37,7 +37,7 @@
   // position
   &.top-left {
     left: 6px;
-    top: 6px;
+    top: 18px;
 
     // override default
     &.ng-enter {
@@ -46,8 +46,8 @@
   }
 
   &.top-right {
-    right: 6px;
-    top: 6px;
+    right: 16px;
+    top: 18px;
 
     // override default
     &.ng-enter {
@@ -57,7 +57,7 @@
 
   &.bottom-right {
     bottom: 6px;
-    right: 6px;
+    right: 16px;
 
     // override default
     &.ng-enter {
